<resources>
    <string name="app_name">Varios campos</string>
    <string name="nome">Nome</string>
    <string name="enviar">Enviar</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="idade">Idade</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="button">Button</string>
    <string name="informacao">Informação:</string>
</resources>
